[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Martin Junghanns <nerdfaktor42@mailbox.org>"]
description = "Advent of Code 2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = "0.1.6"
indexmap = "1.7.0"
